--- a/style.css
+++ b/style.css
@@ -9,13 +9,15 @@ body {
 
 header h1 {
     text-align: center;
-    font-size: 40px;
+    font-size: 80px;
     color: white;
+    font-family: 'Brush script MT', cursive;
 }
 
 header {
+    text-align: center;
     padding: 40px;
-    background-color: rgb(17, 124, 143);
+    background-color: rgb(84, 143, 17);
 }
 
 nav {
